--- a/assets/_less/core/_content.less
+++ b/assets/_less/core/_content.less
@@ -6,9 +6,13 @@ a {
     .transition;
 }
 
-p a {
-    text-decoration: underline;
+p a, ul a {
     color: @color1;
+}
+
+p.caption {
+    #pxtoem > .font-size( 19 );
+    .color-grey;
 }
 
 ul {
