--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -542,9 +542,13 @@ a {
   -o-transition: all 300ms ease-in-out;
   transition: all 300ms ease-in-out;
 }
-p a {
-  text-decoration: underline;
+p a,
+ul a {
   color: #6fc3de;
+}
+p.caption {
+  font-size: 1.1875em;
+  color: #898585 !important;
 }
 ul {
   margin-left: 2.6em;
