--- a/assets/_less/core/_content.less
+++ b/assets/_less/core/_content.less
@@ -7,7 +7,9 @@ a {
 }
 
 p a, ul a {
-    color: @color1;
+    color: @color-black;
+    .font-text-bold;
+    text-decoration: underline;
 }
 
 p.caption {
@@ -25,6 +27,9 @@ ul {
     ul.leads {
         margin-left: 0;
         list-style: none;
+        a {
+            text-decoration: none;
+        }
         li {
             margin-top: 1em;
             margin-left: 0;
